[gd_scene load_steps=6 format=3 uid="uid://u5j835uugruf"]

[ext_resource type="Script" path="res://SetupBuilder.gd" id="1_1u05a"]
[ext_resource type="PackedScene" uid="uid://dgwdc1dwjva0w" path="res://Board.tscn" id="1_13eh5"]
[ext_resource type="Texture2D" uid="uid://dcjock0tjsj0n" path="res://Assets/Pawn_icon.png" id="2_m0l4s"]
[ext_resource type="Script" path="res://PieceSelectorButton.gd" id="4_7fkvw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bgea8"]
bg_color = Color(0.17, 0.17, 0.17, 1)

[node name="SetupBuilder" type="Node2D"]
script = ExtResource("1_1u05a")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bgea8")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PieceButtons" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Pawn" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer/VBoxContainer/PieceButtons"]
custom_minimum_size = Vector2(64, 96)
layout_mode = 2
tooltip_text = "Pawn - Weak piece, with strong ability
HP: 5 / DMG: 3

Movement:
- Move: vertical only
- Attack: diagonal, 1 reach

Ability: Promotion
- can be promoted to a stronger piece
Requirements:
- Roll Cost: 3
- Has to be on the opponents last row
Extra:
- its HP will remain the same
- its damage will be the selected piece's base DMG + 2"
focus_mode = 0
toggle_mode = true
keep_pressed_outside = true
text = "Pawn: 8/1"
icon = ExtResource("2_m0l4s")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("4_7fkvw")
piece_type = 0
available = 8

[node name="Bishop" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer/VBoxContainer/PieceButtons"]
custom_minimum_size = Vector2(64, 96)
layout_mode = 2
tooltip_text = "Pawn - Weak piece, with strong ability
HP: 5 / DMG: 3

Movement:
- Move: vertical only
- Attack: diagonal, 1 reach

Ability: Promotion
- can be promoted to a stronger piece
Requirements:
- Roll Cost: 3
- Has to be on the opponents last row
Extra:
- its HP will remain the same
- its damage will be the selected piece's base DMG + 2"
focus_mode = 0
toggle_mode = true
keep_pressed_outside = true
text = "Bishop: 3/1"
icon = ExtResource("2_m0l4s")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("4_7fkvw")
piece_type = 1
available = 3

[node name="Rook" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer/VBoxContainer/PieceButtons"]
custom_minimum_size = Vector2(64, 96)
layout_mode = 2
tooltip_text = "Pawn - Weak piece, with strong ability
HP: 5 / DMG: 3

Movement:
- Move: vertical only
- Attack: diagonal, 1 reach

Ability: Promotion
- can be promoted to a stronger piece
Requirements:
- Roll Cost: 3
- Has to be on the opponents last row
Extra:
- its HP will remain the same
- its damage will be the selected piece's base DMG + 2"
focus_mode = 0
toggle_mode = true
keep_pressed_outside = true
text = "Rook: 3/1"
icon = ExtResource("2_m0l4s")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("4_7fkvw")
piece_type = 2
available = 3

[node name="Knight" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer/VBoxContainer/PieceButtons"]
custom_minimum_size = Vector2(64, 96)
layout_mode = 2
tooltip_text = "Pawn - Weak piece, with strong ability
HP: 5 / DMG: 3

Movement:
- Move: vertical only
- Attack: diagonal, 1 reach

Ability: Promotion
- can be promoted to a stronger piece
Requirements:
- Roll Cost: 3
- Has to be on the opponents last row
Extra:
- its HP will remain the same
- its damage will be the selected piece's base DMG + 2"
focus_mode = 0
toggle_mode = true
keep_pressed_outside = true
text = "Knight: 2/1"
icon = ExtResource("2_m0l4s")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("4_7fkvw")
piece_type = 3
available = 2

[node name="Queen" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer/VBoxContainer/PieceButtons"]
custom_minimum_size = Vector2(64, 96)
layout_mode = 2
tooltip_text = "Pawn - Weak piece, with strong ability
HP: 5 / DMG: 3

Movement:
- Move: vertical only
- Attack: diagonal, 1 reach

Ability: Promotion
- can be promoted to a stronger piece
Requirements:
- Roll Cost: 3
- Has to be on the opponents last row
Extra:
- its HP will remain the same
- its damage will be the selected piece's base DMG + 2"
focus_mode = 0
toggle_mode = true
keep_pressed_outside = true
text = "None: 1/1"
icon = ExtResource("2_m0l4s")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("4_7fkvw")
piece_type = 4

[node name="PlacedPiecesLabel" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pieces: "
horizontal_alignment = 1

[node name="ResetButton" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Reset Board"

[node name="RandomButton" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Randomize"

[node name="ReadyButton" type="Button" parent="CanvasLayer/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
disabled = true
text = "Ready"

[node name="Board" parent="." instance=ExtResource("1_13eh5")]
unique_name_in_owner = true
height = 2
dark_color = Color(0, 0.545098, 0.545098, 1)
light_color = Color(0.529412, 0.807843, 0.980392, 1)
border_color = Color(0, 0, 0, 1)
show_top = false

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(126, 0)
zoom = Vector2(0.7, 0.7)

[node name="TransparentPreview" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_m0l4s")

[node name="FloatingPreview" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_m0l4s")

[node name="Pieces" type="Node2D" parent="."]
unique_name_in_owner = true
